--- a/docs/hugo.yml
+++ b/docs/hugo.yml
@@ -3,7 +3,7 @@ languageCode: "en-us"
 title: "Hugo Fresh documentation"
 module:
   imports:
-    path: github.com/StefMa/hugo-fresh
+    path: github.com/anoduck/fresh-fork
 
 params:
   navbarlogo:
@@ -17,7 +17,7 @@ params:
     image: illustrations/worker.svg
   navbar:
   - title: GitHub
-    url: https://github.com/StefMa/hugo-fresh
+    url: https://github.com/anoduck/fresh-fork
     button: true
 
 markup:
