--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
     "dependencies": {},
     "devDependencies": {}
   },
-  "dependencies": {
-    "bulma": "^0.9.4",
-    "bulma-prefers-dark": "^0.1.0-beta.1"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "name": "fresh-fork",
   "version": "0.1.0"
 }
