--- a/config.yaml
+++ b/config.yaml
@@ -46,3 +46,7 @@ module:
     mounts:
     - source: dist/css/bulma-timeline.sass
       target: assets/bulma-timeline/bulma-timeline.sass
+  - path: github.com/Wikiki/bulma-carousel
+    mounts:
+    - source: src/sass/index.sass
+      target: assets/bulma-carousel/bulma-carousel.sass
